--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IP Convert</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <h1>Welcome to IP Converter</h1>
+    <div class="title">
+      <h1>Welcome to IP Convert</h1>
       <p>Enter an IPV4 address and convert it between decimal and binary!</p>
     </div>
     <div>
@@ -23,7 +24,7 @@
     </div>
 
     <section>
-      <h2>Learn How to Read Binary</h2>
+      <h2>Learn How to Read 8 Bit Binary</h2>
       <p>First lets look at our base 10 number system.</p>
 
       <div></div>
